--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -60,7 +60,7 @@
     <div id="vpnSwitch" style="display: none;">
       <span>Join the Network</span>
       <label class="switch">
-        <input type="checkbox" id="toggleVPN">
+        <input type="checkbox" id="toggleVPN" onclick="toggledVPN(event)">
         <span class="slider round"></span>
       </label>
     </div>
