--- a/electron-app/index.html
+++ b/electron-app/index.html
@@ -3,71 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>Veilnet</title>
-  <style>
-    .switch {
-      position: relative;
-      display: inline-block;
-      width: 60px;
-      height: 34px;
-    }
-  
-    .switch input {
-      display: none;
-    }
-  
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: 0.4s;
-    }
-  
-    .slider:before {
-      position: absolute;
-      content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
-      background-color: white;
-      transition: 0.4s;
-    }
-  
-    input:checked + .slider {
-      background-color: #2196f3;
-    }
-  
-    input:checked + .slider:before {
-      transform: translateX(26px);
-    }
-  
-    .slider.round {
-      border-radius: 34px;
-    }
-  
-    .slider.round:before {
-      border-radius: 50%;
-    }
-  </style>
-  
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="authenticate">Authenticate with Metamask</button>
-    <div id="vpnSwitch" style="display: none;">
-      <span>Join the Network</span>
-      <label class="switch">
-        <input type="checkbox" id="toggleVPN" onclick="toggledVPN(event)">
-        <span class="slider round"></span>
-      </label>
-    </div>
+  <div id="title-bar">
+    <button id="minimize">-</button>
+    <button id="maximize">+</button>
+    <button id="close">x</button>
+  </div>
+  <button id="authenticate">Authenticate with Metamask</button>
+  <div id="vpnSwitch" style="display: none;">
+    <span class="labeltext">Enter Veilnet</span>
+    <label class="switch">
+      <input type="checkbox" id="toggleVPN" onclick="toggledVPN(event)">
+      <span class="slider round"></span>
+    </label>
+  </div>
     
-  
-    <h2>Connected Peers</h2>
-    <ul id="peer-list"></ul>
+  <h2>Connected Peers</h2>
+  <ul id="peer-list"></ul>
 
   <script src="renderer.js"></script>
 </body>
